--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+body { font-family: 'Roboto';}
 .logo {color: #2196F3;
 position: absolute;
 width: 145px;
@@ -89,6 +90,13 @@ line-height: 16px;
 letter-spacing: 0.02em;
 }
 
+.bg-hdr {background-color: rgba(47, 48, 58, 1);
+position: absolute;
+width: 1600px;
+height: 600px;
+left: 0px;
+top: 80px;}
+
 h1 {color: rgba(255, 255, 255, 1);
     position: absolute;
     width: 696px;
@@ -128,14 +136,355 @@ h1 {color: rgba(255, 255, 255, 1);
     letter-spacing: 0.06em;
 }
 
-h2 {color: rgba(33, 33, 33, 1);
+.attention-detail {color: rgba(33, 33, 33, 1);
+    position: absolute;
+    width: 270px;
+    height: 16px;
+    left: 215px;
+    top: 774px;
+    
     font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.punctuality {color: rgba(33, 33, 33, 1);
+position: absolute;
+width: 270px;
+height: 16px;
+left: 515px;
+top: 774px;
+
+font-family: 'Roboto';
 font-style: normal;
 font-weight: 700;
-font-size: 36px;
-line-height: 42px;
-text-align: center;
+font-size: 14px;
+line-height: 16px;
 letter-spacing: 0.03em;
-    
-
+text-transform: uppercase;
 }
+.planning {color: rgba(33, 33, 33, 1);
+position: absolute;
+width: 270px;
+height: 16px;
+left: 815px;
+top: 774px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+}
+.tech {counter-reset: rgba(33, 33, 33, 1);
+position: absolute;
+width: 270px;
+height: 16px;
+left: 1115px;
+top: 774px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+}
+.idea-considerations {color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 270px;
+height: 75px;
+left: 215px;
+top: 800px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;
+}
+.task-company{color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 270px;
+height: 75px;
+left: 515px;
+top: 800px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;
+}
+.consult{color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 270px;
+height: 75px;
+left: 815px;
+top: 800px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;
+}
+.significance-problem {color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 270px;
+height: 75px;
+left: 1115px;
+top: 800px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;
+}
+.what-we-do {color: rgba(33, 33, 33, 1);
+    position: absolute;
+    width: 376px;
+    height: 42px;
+    left: 612px;
+    top: 969px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;}
+.Team {color: rgba(33, 33, 33, 1);position: absolute;
+    width: 264px;
+    height: 42px;
+    left: 668px;
+    top: 1543px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;}
+.name-ihor {color: rgba(33, 33, 33, 1);
+position: absolute;
+width: 151px;
+height: 19px;
+left: 275px;
+top: 1925px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.designer{color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 130px;
+height: 19px;
+left: 285px;
+top: 1954px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.name-olha{color: rgba(33, 33, 33, 1);
+position: absolute;
+width: 109px;
+height: 19px;
+left: 596px;
+top: 1925px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.developer{color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 147px;
+height: 19px;
+left: 577px;
+top: 1954px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.name-nick {color: rgba(33, 33, 33, 1);
+position: absolute;
+width: 137px;
+height: 19px;
+left: 882px;
+top: 1925px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.marketing{color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 76px;
+height: 19px;
+left: 912px;
+top: 1954px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.name-michael {color: rgba(33, 33, 33, 1);
+position: absolute;
+width: 134px;
+height: 19px;
+left: 1183px;
+top: 1925px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.ui-Designer {color: rgba(117, 117, 117, 1);
+position: absolute;
+width: 87px;
+height: 19px;
+left: 1207px;
+top: 1954px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;}
+
+.logo-footer {color: #2196F3;
+position: absolute;
+width: 145px;
+height: 31px;
+left: 215px;
+top: 2157px;
+
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+/* identical to box height */
+
+letter-spacing: 0.03em;}
+
+.link-adr-ftr {color: rgba(255, 255, 255, 1);
+position: absolute;
+width: 231px;
+height: 21px;
+left: 215px;
+top: 2208px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;}
+
+.link-mail-ftr {color: rgba(255, 255, 255, 0.6);
+position: absolute;
+width: 231px;
+height: 21px;
+left: 215px;
+top: 2238px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;}
+
+.link-ph-ftr {color: rgba(255, 255, 255, 0.6);
+position: absolute;
+width: 231px;
+height: 21px;
+left: 215px;
+top: 2268px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;}
+
