--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body { color: #212121;
 background-color: white;
-font-family: 'Roboto', 'Raleway', 'Tahoma', sans-serif;}
+font-family: 'Roboto', 'Raleway', sans-serif;}
 
 .menu-nav li a {
 text-decoration: none;
@@ -18,7 +18,6 @@ left: 215px;
 top: 24px;
 
 font-family: 'Raleway';
-font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
@@ -34,7 +33,6 @@ height: 16px;
 left: 453px;
 top: 32px;
 
-font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
@@ -48,7 +46,6 @@ height: 16px;
 left: 552px;
 top: 32px;
 
-font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
@@ -62,7 +59,6 @@ height: 16px;
 left: 679px;
 top: 32px;
 
-font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
@@ -80,7 +76,6 @@ height: 16px;
 left: 1078px;
 top: 32px;
 
-font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
@@ -94,7 +89,6 @@ height: 16px;
 left: 1263px;
 top: 32px;
 
-font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
@@ -121,7 +115,6 @@ height: 120px;
 left: 452px;
 top: 280px;
     
-font-style: normal;
 font-weight: 900;
 font-size: 44px;
 line-height: 60px;
@@ -139,7 +132,6 @@ height: 30px;
 left: 732px;
 top: 440px;
 
-font-style: normal;
 font-weight: 700;
 font-size: 16px;
 line-height: 30px;
@@ -182,7 +174,6 @@ height: 16px;
 left: 515px;
 top: 774px;
 
-font-style: normal;
 font-weight: 700;
 font-size: 14px;
 line-height: 16px;
@@ -251,7 +242,6 @@ height: 75px;
 left: 815px;
 top: 800px;
 
-font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 24px;
@@ -266,7 +256,6 @@ height: 75px;
 left: 1115px;
 top: 800px;
 
-font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 24px;
@@ -280,7 +269,6 @@ height: 42px;
 left: 612px;
 top: 969px;
     
-font-style: normal;
 font-weight: 700;
 font-size: 36px;
 line-height: 42px;
@@ -331,7 +319,6 @@ width: 264px;
 height: 42px;
 left: 668px;
     
-font-style: normal;
 font-weight: 700;
 font-size: 36px;
 line-height: 42px;
@@ -354,7 +341,6 @@ height: 19px;
 left: 275px;
 top: 1925px;
 
-font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 19px;
@@ -370,7 +356,6 @@ height: 19px;
 left: 285px;
 top: 1954px;
     
-font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 19px;
@@ -395,7 +380,6 @@ height: 19px;
 left: 596px;
 top: 1925px;
         
-font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 19px;
@@ -411,7 +395,6 @@ height: 19px;
 left: 577px;
 top: 1954px;
         
-font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 19px;
@@ -436,7 +419,6 @@ height: 19px;
 left: 882px;
 top: 1925px;
         
-font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 19px;
@@ -452,7 +434,6 @@ height: 19px;
 left: 912px;
 top: 1954px;
         
-font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 19px;
@@ -477,7 +458,6 @@ height: 19px;
 left: 1183px;
 top: 1925px;
 
-font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 19px;
@@ -493,7 +473,6 @@ height: 19px;
 left: 1207px;
 top: 1954px;
 
-font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 19px;
@@ -514,7 +493,6 @@ left: 215px;
 top: 2157px;
 
 font-family: 'Raleway';
-font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 31px;
@@ -531,7 +509,6 @@ height: 21px;
 left: 215px;
 top: 2208px;
 
-font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 24px;
@@ -546,7 +523,6 @@ height: 21px;
 left: 215px;
 top: 2238px;
 
-font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 24px;
@@ -561,7 +537,6 @@ height: 21px;
 left: 215px;
 top: 2268px;
 
-font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 24px;
