--- a/css/styles.css
+++ b/css/styles.css
@@ -154,17 +154,23 @@ align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
 
+cursor: pointer; 
+
 background-color: rgba(33, 150, 243, 1);
 position: absolute;
 width: 200px;
 height: 50px;
 left: 700px;
 top: 430px;
+justify-content: space-around;}
 
+.text-button:hover,
+.text-button:focus {
 background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
-justify-content: space-around;}
+}
+/* features section  */
 
 .attention-detail {color: rgba(33, 33, 33, 1);
 position: absolute;
